--- a/templates/interface.html
+++ b/templates/interface.html
@@ -75,6 +75,21 @@ function goPython(text){
      });
 }
 
+function suggestions(text){
+  $.ajax({
+      type: "POST",
+      url: "/suggestions",
+      data: JSON.stringify({"param": text}),
+      contentType: "application/json;charset=UTF-8",
+      beforeSend: function() {
+        alert(text);
+      },
+      success: function(response) { 
+        alert("It worked " + response);
+      }
+  });
+}
+
   // $.get(scrapeJSON, function(data) {
   //    // Get JSON data from Python script
   //    if (data){
@@ -110,6 +125,7 @@ paard
 
 <br>
 <input type="button" value="Play" onclick='goPython(document.getElementById("mySiGML").value);' />
+<input type="button" value="Suggest" onclick='suggestions(document.getElementById("mySiGML").value);' />
 <input type="button" value="Stop" onclick='CWASA.stopSiGML();' />
 <br>
 <br>
@@ -118,7 +134,6 @@ Adjust speed: <span class="CWASASpeed av0"></span>
 
 <!-- New URL:  <input type="button" value="doURL" onclick='playURL(document.getElementById("myURL").value);' /><br>
 <input id="myURL" class="txtSiGMLURL av0" value="welkom-ngt.sigml" type="text" />
-
 <br>
  -->
 <!-- <hr/> -->
