--- a/templates/interface.html
+++ b/templates/interface.html
@@ -53,7 +53,7 @@ CWASA.addHook("avatarsign", setSignFrame, 0);
 </script>
 
 <!-- <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
-<script type="text/javascript" src="static/jquery-3.5.1.min.js"></script>
+<script type="text/javascript" src="../static/jquery-3.5.1.min.js"></script>
 
 <script>
 let scrapeJSON = 'http://bluegalaxy.info/cgi/scrapeJSON.py'
