suggesties via alert

--- a/templates/interface.html
+++ b/templates/interface.html
@@ -91,7 +91,7 @@ function suggestions(text){
         alert("options: " + options);
       },
       error: function (request, status, error) {
-        alert(request.statusText + ", " + error);
+        alert(error);
       },
   });
 }
