--- a/templates/interface.html
+++ b/templates/interface.html
@@ -90,8 +90,8 @@ function suggestions(text){
         options = response.split(",");
         alert("options: " + options);
       },
-      error: function (qXHR, textStatus, errorThrown ) {
-        alert(textStatus);
+      error: function (qXHR, error, errorThrown ) {
+        alert(error);
         alert(errorThrown);
       },
   });
