suggesties via alert

--- a/templates/interface.html
+++ b/templates/interface.html
@@ -91,7 +91,7 @@ function suggestions(text){
         alert("options: " + options);
       },
       error: function (qXHR, error, errorThrown ) {
-        alert(error);
+        console.log(error);
         alert(errorThrown);
       },
   });
