suggesties via alert

--- a/templates/interface.html
+++ b/templates/interface.html
@@ -80,7 +80,7 @@ function goPython(text){
 function suggestions(text){
   $.ajax({
       method: "POST",
-      url: "/suggestions",
+      url: "../server.py/suggestions",
       data: JSON.stringify({"param": text}),
       contentType: "application/json;charset=UTF-8",
       beforeSend: function() {
@@ -92,7 +92,6 @@ function suggestions(text){
       },
       error: function (qXHR, error, errorThrown ) {
         console.log(error);
-        alert(errorThrown);
       },
   });
 }
