--- a/templates/interface.html
+++ b/templates/interface.html
@@ -7,6 +7,7 @@
 
 <meta http-equiv="Access-Control-Allow-Origin" content="*">
 <meta http-equiv="Access-Control-Allow-Methods" content="GET">
+<!-- <meta http-equiv="Access-Control-Allow-Methods" content="POST"> -->
 
 <!-- CWA @ vhg.cmp.uea.ac.uk/jrwg/ -->
 <link rel="stylesheet" href="../static/cwasa.css">
