adding suggestions as divs to page

--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -87,4 +87,10 @@ h3, h4 {
 
 .displayed { }
 .undisplayed { display: none; }
+
+.suggestions{
+	width: auto;
+	height: auto;
+	margin:50px;
+}
 /*--------*/
