adding suggestions as divs to page

--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -89,8 +89,6 @@ h3, h4 {
 .undisplayed { display: none; }
 
 .suggestions{
-	width: auto;
-	height: auto;
-	margin:50px;
+	width: 50 px;
 }
 /*--------*/
