suggesties op een mooie manier weergeven

--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -88,20 +88,9 @@ h3, h4 {
 .displayed { }
 .undisplayed { display: none; }
 
-.suggestions{
+/*.suggestions{
 	width: 50 px;
-}
-
-#mySiGML {
-  background-image: url('/css/searchicon.png'); /* Add a search icon to input */
-  background-position: 10px 12px; /* Position the search icon */
-  background-repeat: no-repeat; /* Do not repeat the icon image */
-  width: 100%; /* Full-width */
-  font-size: 16px; /* Increase font-size */
-  padding: 12px 20px 12px 40px; /* Add some padding */
-  border: 1px solid #ddd; /* Add a grey border */
-  margin-bottom: 12px; /* Add some space below the input */
-}
+}*/
 
 #suggestions {
   /* Remove default list styling */
@@ -121,7 +110,9 @@ h3, h4 {
   display: block; /* Make it into a block element to fill the whole list */
 }
 
-#suggestions div a:hover:not(.header) {
-  background-color: #eee; /* Add a hover effect to all links, except for headers */
+
+#suggestions div:hover {
+  /*when hovering an item:*/
+  background-color: #e9e9e9;
 }
 /*--------*/
