--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -113,6 +113,6 @@ h3, h4 {
 
 #suggestions div:hover {
   /*when hovering an item:*/
-  background-color: #e9e9e9;
+  background-color: #A3B8D2;
 }
 /*--------*/
