suggesties vastmaken aan inputveld

--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -91,34 +91,8 @@ h3, h4 {
 /*.suggestions{
 	width: 50 px;
 }*/
-
-#suggestions {
-  /* Remove default list styling */
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-#suggestions div a {
-  border: 1px solid #ddd; /* Add a border to all links */
-  margin-top: -1px; /* Prevent double borders */
-  background-color: #f6f6f6; /* Grey background color */
-  padding: 12px; /* Add some padding */
-  text-decoration: none; /* Remove default text underline */
-  font-size: 18px; /* Increase the font-size */
-  color: black; /* Add a black text color */
-  display: block; /* Make it into a block element to fill the whole list */
-}
-
-
-#suggestions div:hover {
-  /*when hovering an item:*/
-  background-color: #A3B8D2;
-}
-
-.suggestions-active {
-  /*when navigating through the items using the arrow keys:*/
-  background-color: DodgerBlue !important;
-  color: #ffffff;
-}
+.ui-widget
+ {
+    max-width: 500px;
+ }
 /*--------*/
