--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -52,7 +52,8 @@ h3, h4 {
   	margin-left: auto;
   	margin-right: auto;
   	margin-bottom: 20px;
-	position: relative; background: #A3B8D2;
+	/*position: relative; */
+	background: #A3B8D2;
 	width: 400px; height: 60%;
 	border: 0px; padding: 0px;
 }
