--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -54,7 +54,7 @@ h3, h4 {
   	margin-bottom: 20px;
 	/*position: relative; */
 	background: #A3B8D2;
-	width: 400px; height: 60%;
+	width: 400px; height: 400px;
 	border: 0px; padding: 0px;
 }
 
