avatar links en overige elementen rechts

--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -51,7 +51,7 @@ h3, h4 {
 	display: inline-block;
   	/*margin-left: 10px;
   	margin-right: 5px;*/
-  	margin-bottom: 20px;
+  	/*margin-bottom: 20px;*/
 	/*position: relative; */
 	background: #A3B8D2;
 	width: 400px; height: 400px;
