--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -97,4 +97,10 @@ h3, h4 {
     /*max-width: 500px;*/
     width: 500px;
  }
+
+ .tab{
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+ }
 /*--------*/
