--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -114,4 +114,22 @@ h3, h4 {
   border: 1px solid #ccc;
   background-color: #f1f1f1;
  }
+
+ .tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+.tab button:hover {
+  background-color: #ddd;
+}
+
+.tab button.active {
+  background-color: #ccc;
+}
 /*--------*/
