--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -111,8 +111,10 @@ h3, h4 {
 
  .tab{
   overflow: hidden;
-  border: 1px solid #ccc;
+  border: 5px solid #ccc;
   background-color: #f1f1f1;
+  border-left: none;
+  border-right: none;
  }
 
  .tab button {
