--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -153,7 +153,7 @@ margin:5px;
 .displayInfo{
   background-color: #ddd;
   max-height: 30px;
-  max-width: 60px;
+  width: 60px;
   margin: 3px; 
 }
 /*--------*/
