add question circle

--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -152,8 +152,8 @@ margin:5px;
 
 .displayInfo{
   background-color: #ddd;
-  max-height: 30px;
+  /*max-height: 30px;
   width: 60px;
-  margin: 3px; 
+*/  margin: 3px; 
 }
 /*--------*/
