--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -154,6 +154,6 @@ margin:5px;
   background-color: #ddd; 
   display: inline-block;
   margin: 3px; 
-  max-width: 125px;
+  /*max-width: 200px;*/
 }
 /*--------*/
