--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -153,7 +153,7 @@ margin:5px;
 }
 
 .displayInfo{
-  background-color: #808080; 
+  background-color: #a6a6a6;
   display: inline-block;
   margin: 3px; 
   border-radius: 25px;
