--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -153,7 +153,7 @@ h3, h4 {
 }
 
 .displayInfo{
-  background-color: #a6a6a6;
+  background-color: #8c8c8c;
   display: absolute;
   margin: 3px; 
   border-radius: 25px;
