--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -152,8 +152,8 @@ h3, h4 {
 
 .displayInfo{
   background-color: #8c8c8c;
-  display: inline-block;
-  margin: 1px; 
+  display: relative;
+  /*margin: 1px; */
   border-radius: 25px;
   z-index: 2;
   max-width: 275px;
