--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -152,7 +152,7 @@ h3, h4 {
 
 .displayInfo{
   background-color: #8c8c8c;
-  display: relative;
+  display: inline-block;
   /*margin: 1px; */
   border-radius: 25px;
   z-index: 2;
