--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -156,7 +156,7 @@ h3, h4 {
   /*margin: 1px; */
   border-radius: 25px;
   z-index: 2;
-  max-width: 275px;
+  /*max-width: 275px;*/
   text-align: center;
 }
 /*
