--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -153,6 +153,7 @@ h3, h4 {
 .displayInfo{
   background-color: #8c8c8c;
   display: inline-block;
+  position: relative;
   /*margin: 1px; */
   border-radius: 25px;
   z-index: 2;
