--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -165,5 +165,6 @@ h3, h4 {
     background-color: #8c8c8c;
     padding-top: 1px;
     padding-bottom: 1px;
+    display: inline-block;
 }
 /*--------*/
