--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -161,10 +161,8 @@ h3, h4 {
 }
 
 
-.displayInfo * {
+/*.displayInfo * {
     background-color: #8c8c8c;
-    padding-top: 1px;
-    padding-bottom: 1px;
     display: inline-block;
-}
+}*/
 /*--------*/
