--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -163,6 +163,8 @@ h3, h4 {
 
 /*.displayInfo * {
     background-color: #8c8c8c;
+    padding-top: 1px;
+    padding-bottom: 1px;
     display: inline-block;
 }*/
 /*--------*/
