--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -154,19 +154,9 @@ h3, h4 {
   background-color: #8c8c8c;
   border-radius: 25px;
   text-align: center;
-  /*margin: 0px; 
-  width: 400px; 
-  padding: 2px; 
-  display: inline-block;*/
+  margin: 0px; 
+  padding: 5px; 
+  display: inline-block;
   /*z-index: 2;*/
   /*position: relative;*/
 }
-
-
-/*.displayInfo * {
-    background-color: #8c8c8c;
-    padding-top: 1px;
-    padding-bottom: 1px;
-    display: inline-block;
-}*/
-/*--------*/
