--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -159,6 +159,6 @@ h3, h4 {
   padding-bottom: 3px;
   padding-top: 3px;
   display: inline-block;
-  /*z-index: 2;*/
-  /*position: relative;*/
+  z-index: 2;
+  position: relative;
 }
