--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -146,15 +146,35 @@ h3, h4 {
 }
 
 
-.displayInfo{
-  background-color: #8c8c8c;
-  border-radius: 25px;
-  text-align: center;
-  margin: 0px; 
-  padding: 5px; 
-  padding-bottom: 3px;
-  padding-top: 3px;
-  display: inline-block;
-  z-index: 2;
-  position: relative;
+.ui-tooltip-content::after {
+    content: '';
+    position: absolute;
+    border-style: solid;
+    display: block;
+    width: 0;
 }
+.right .ui-tooltip-content::after {
+    top: 18px;
+    left: -10px;
+    border-color: transparent #666;
+    border-width: 10px 10px 10px 0;
+}
+.left .ui-tooltip-content::after {
+    top: 18px;
+    right: -10px;
+    border-color: transparent #666;
+    border-width: 10px 0 10px 10px;
+}
+.top .ui-tooltip-content::after {
+    bottom: -10px;
+    left: 72px;
+    border-color: #666 transparent;
+    border-width: 10px 10px 0;    
+}
+.bottom .ui-tooltip-content::after {
+    top: -10px;
+    left: 72px;
+    border-color: #666 transparent;
+    border-width: 0 10px 10px;
+}
+
