tooltip using jquery

--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -153,28 +153,9 @@ h3, h4 {
     display: block;
     width: 0;
 }
-.right .ui-tooltip-content::after {
+.ui-tooltip-content::after {
     top: 18px;
     left: -10px;
     border-color: transparent #666;
     border-width: 10px 10px 10px 0;
 }
-.left .ui-tooltip-content::after {
-    top: 18px;
-    right: -10px;
-    border-color: transparent #666;
-    border-width: 10px 0 10px 10px;
-}
-.top .ui-tooltip-content::after {
-    bottom: -10px;
-    left: 72px;
-    border-color: #666 transparent;
-    border-width: 10px 10px 0;    
-}
-.bottom .ui-tooltip-content::after {
-    top: -10px;
-    left: 72px;
-    border-color: #666 transparent;
-    border-width: 0 10px 10px;
-}
-
