--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -145,18 +145,6 @@ h3, h4 {
   padding: 6px 12px;
 }
 
-.ui-tooltip {
-    background: #666;
-    color: white;
-    border: none;
-    padding: 0;
-    opacity: 1;
-}
-.ui-tooltip-content {
-    position: relative;
-    padding: 1em;
-}
-
 .ui-tooltip-content::after {
     content: '';
     position: absolute;
@@ -167,6 +155,6 @@ h3, h4 {
 .ui-tooltip-content::after {
     top: 18px;
     left: -10px;
-    border-color: transparent #666;
+    border-color: transparent #ffffff;
     border-width: 10px 10px 10px 0;
 }
