--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -145,7 +145,7 @@ h3, h4 {
   padding: 6px 12px;
 }
 
-/*Styles the triangle to in the bottom left of the tooltip*/
+/*Styles the triangle in the bottom left of the tooltip*/
 .ui-tooltip-content::after {
     content: '';
     position: absolute;
