--- a/static/cwasa.css
+++ b/static/cwasa.css
@@ -145,6 +145,10 @@ h3, h4 {
   padding: 6px 12px;
 }
 
+.landingpage {
+  display: block;
+}
+
 /*Styles the triangle in the bottom left of the tooltip*/
 .ui-tooltip-content::after {
     content: '';
