--- a/static/grayscalestyles.css
+++ b/static/grayscalestyles.css
@@ -10281,7 +10281,7 @@ body {
 .projects-section {
   padding: 10rem 0;
 }
-.intro-section {
+.section-fixtotop {
   padding: 0 0;
 }
 .projects-section .featured-text {
