--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -94,3 +94,17 @@
 
 .displayed { }
 .undisplayed { display: none; }
+
+/* Busy state */
+body.busy::before {
+   content: '';
+   display: block;
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   opacity: 0.5;
+   z-index: 999;
+   background: #eee url('../images/spinner.gif') center center no-repeat;
+}
