--- a/css/grayscalestyles.css
+++ b/css/grayscalestyles.css
@@ -10271,15 +10271,12 @@ body {
 }
 
 .about-section {
-  padding-top: 10rem;
-  background: linear-gradient(to bottom, #000000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
-}
-.about-section p {
-  margin-bottom: 5rem;
+  padding-top: 5rem;
+  padding-bottom: 3rem;
 }
 
 .projects-section {
-  padding: 10rem 0;
+  padding: 5rem 0;
 }
 .section-fixtotop {
   padding: 0 0;
