--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -108,3 +108,18 @@ body.busy::before {
    z-index: 999;
    background: #eee url('../images/spinner.gif') center center no-repeat;
 }
+
+.explSpan{
+  width: 500px; height: 500px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: black;
+}
+
+.explSiGML{
+  display: inline-block;
+  padding: 10px;
+  text-align: center;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
