deze versie gelijkgetrokken met de versie op de server. replay optie toegevoegd by live translation en fingerspellen

--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -122,3 +122,14 @@ body.busy::before {
   overflow-y: scroll;
   overflow-x: hidden;
 }
+
+#translation{
+  width:100%; 
+  display:inline-block; 
+  resize: none
+}
+
+#suggestions{
+  width: 100%; 
+  resize: none;
+}
