--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -110,7 +110,8 @@ body.busy::before {
 }
 
 .explSpan{
-  width: 500px; height: 500px;
+  width: 500px; 
+  height: 500px;
   border-style: solid;
   border-width: 3px;
   border-color: black;
@@ -121,15 +122,11 @@ body.busy::before {
   text-align: center;
   overflow-y: scroll;
   overflow-x: hidden;
+  padding: 10px
 }
 
-#translation{
+.inputBox{
   width:100%; 
   display:inline-block; 
-  resize: none
-}
-
-#suggestions{
-  width: 100%; 
   resize: none;
 }
