--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -115,6 +115,7 @@ body.busy::before {
   border-style: solid;
   border-width: 3px;
   border-color: black;
+  display: inline-block;
 }
 
 .explSiGML{
