SiGML pagina: avatar + explain

--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -52,24 +52,20 @@
 
 .CWASAAvatar {
 	display: inline-block;
-  	/*margin-left: 10px;
-  	margin-right: 5px;*/
-  	/*margin-bottom: 20px;*/
-	/*position: relative; */
 	background: #A3B8D2;
-	width: 500px; height: 500px;
-	border: 0px; padding: 0px;
+	width: 500px; 
+  height: 500px;
+	border: 0px; 
+  padding: 0px;
 }
 
 .CWASAAvatarTut {
   display: inline-block;
-    /*margin-left: 10px;
-    margin-right: 5px;*/
-    /*margin-bottom: 20px;*/
-  /*position: relative; */
   background: #A3B8D2;
-  width: 200px; height: 300px;
-  border: 0px; padding: 0px;
+  width: 200px; 
+  height: 500px;
+  border: 0px; 
+  padding: 0px;
 }
 
 .CWASAGUI {
