avatar kleiner laten verschijnen

--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -117,7 +117,7 @@ body.busy::before {
 }
 
 .explSpan{
-  width: 400px; 
+  /*width: 400px; */
   height: 500px;
   border-style: solid;
   border-width: 3px;
