fade in effect on main website

--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -130,3 +130,14 @@ body.busy::before {
   display:inline-block; 
   resize: none;
 }
+
+
+.main {
+  animation: fadeEffect 1s; /* Fading effect takes 1 second */
+}
+
+/* Go from zero to full opacity */
+@keyframes fadeEffect {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
