--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -132,14 +132,14 @@ body.busy::before {
 }
 
 
-.nav-link:show.bs.tab{
+/*.nav-link{
   animation: fadein 2s;
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 2s; /* Firefox < 16 */
   -ms-animation: fadein 2s; /* Internet Explorer */
   -o-animation: fadein 2s; /* Opera < 12.1 */
 }
-
+*/
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
