--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -178,3 +178,14 @@ body.busy::before {
   position: fixed;
   vertical-align: top;
 }
+
+/*Overrides the glyphicons in the timepicker*/
+.glyphicon {
+  @extend .fa;
+  &.glyphicon-chevron-up {
+    @extend .fa-chevron-up;
+  }
+  &.glyphicon-chevron-down {
+    @extend .fa-chevron-down;
+  }
+}
