--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -193,9 +193,9 @@ body.busy::before {
     display: inline-block;
 }
 
-.glyphicon-chevron-left:before {
+.glyphicon-chevron-up:before {
   content: "\f077";
 }
-.glyphicon-chevron-right:before {
+.glyphicon-chevron-down:before {
   content: "\f078";
 }
