--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -193,9 +193,9 @@ body.busy::before {
     display: inline-block;
 }
 
-.glyphicon-chevron-up{
+.glyphicon-chevron-up:before{
   content: "\f077" !important;
 }
-.glyphicon-chevron-down{
+.glyphicon-chevron-down:before{
   content: "\f078" !important;
 }
