--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -200,3 +200,19 @@ body.busy::before {
   width: 80%;
   text-align: center;
 }
+
+#checkPage{
+ width : 100%;
+ height : 100%; 
+ position : fixed;
+ z-index : 40;
+ background-color : #006666;
+ text-align : center;
+ display : block;
+}
+
+#pwdAlert{
+ text-align : center;
+ z-index : 50;
+ position : fixed;
+}
