--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -203,7 +203,7 @@ body.busy::before {
 #checkPage{
  width : 100%;
  height : 100%; 
- background-color : #006666;
+ /*background-color : #006666;*/
  text-align: center;
 /* display : block;*/
  z-index: 1040;
