--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -203,15 +203,11 @@ body.busy::before {
 #checkPage{
  width : 100%;
  height : 100%; 
- /*background-color : #006666;*/
+ background-color : #006666;
  text-align: center;
-/* display : block;*/
+ display : block;
  z-index: 1040;
  position: fixed;
-
- display: flex; 
- justify-content: center; 
- align-items: center; 
 }
 
 #pwdAlert{
