--- a/css/cwasa-reduced.css
+++ b/css/cwasa-reduced.css
@@ -204,13 +204,14 @@ body.busy::before {
 }
 
 #checkPage{
- width : 100%;
- height : 100%;
- background-color : #006666;
+ width: 100%;
+ height: 100%;
+ background-color: #006666;
  text-align: center;
  display : block;
  z-index: 1040;
  position: fixed;
+ margin: 0;
 }
 
 #pwdAlert{
